--- a/notebooks/analyze-superclass-results-08-20.ipynb
+++ b/notebooks/analyze-superclass-results-08-20.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,32 +156,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'seal': 100,\n",
+       "         'beaver': 100,\n",
+       "         'whale': 100,\n",
+       "         'dolphin': 100,\n",
+       "         'otter': 100})"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "Counter(prediction_df[prediction_df['coarse_labels_string']=='aquatic_mammals']['fine_labels_string'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aquatic_mammals coarse accuracy: 0.736\n",
-      "seal coarse accuracy: 0.65\n",
-      "beaver coarse accuracy: 0.68\n",
-      "whale coarse accuracy: 0.84\n",
-      "dolphin coarse accuracy: 0.82\n",
-      "otter coarse accuracy: 0.69\n"
+      "large_natural_outdoor_scenes superclass coarse label accuracy: 0.88\n",
+      "mountain subclass coarse label accuracy: 0.89\n",
+      "forest subclass coarse label accuracy: 0.66\n",
+      "sea subclass coarse label accuracy: 0.95\n",
+      "cloud subclass coarse label accuracy: 0.95\n",
+      "plain subclass coarse label accuracy: 0.95\n",
+      "\n",
+      "\n",
+      "aquatic_mammals superclass coarse label accuracy: 0.736\n",
+      "seal subclass coarse label accuracy: 0.65\n",
+      "beaver subclass coarse label accuracy: 0.68\n",
+      "whale subclass coarse label accuracy: 0.84\n",
+      "dolphin subclass coarse label accuracy: 0.82\n",
+      "otter subclass coarse label accuracy: 0.69\n",
+      "\n",
+      "\n",
+      "fruit_and_vegetables superclass coarse label accuracy: 0.872\n",
+      "mushroom subclass coarse label accuracy: 0.68\n",
+      "apple subclass coarse label accuracy: 0.98\n",
+      "orange subclass coarse label accuracy: 0.99\n",
+      "pear subclass coarse label accuracy: 0.86\n",
+      "sweet_pepper subclass coarse label accuracy: 0.85\n",
+      "\n",
+      "\n",
+      "flowers superclass coarse label accuracy: 0.93\n",
+      "tulip subclass coarse label accuracy: 0.96\n",
+      "rose subclass coarse label accuracy: 0.93\n",
+      "sunflower subclass coarse label accuracy: 0.93\n",
+      "orchid subclass coarse label accuracy: 0.87\n",
+      "poppy subclass coarse label accuracy: 0.96\n",
+      "\n",
+      "\n",
+      "large_omnivores_and_herbivores superclass coarse label accuracy: 0.75\n",
+      "camel subclass coarse label accuracy: 0.82\n",
+      "chimpanzee subclass coarse label accuracy: 0.68\n",
+      "cattle subclass coarse label accuracy: 0.75\n",
+      "elephant subclass coarse label accuracy: 0.81\n",
+      "kangaroo subclass coarse label accuracy: 0.69\n",
+      "\n",
+      "\n",
+      "insects superclass coarse label accuracy: 0.79\n",
+      "butterfly subclass coarse label accuracy: 0.79\n",
+      "cockroach subclass coarse label accuracy: 0.84\n",
+      "bee subclass coarse label accuracy: 0.82\n",
+      "beetle subclass coarse label accuracy: 0.77\n",
+      "caterpillar subclass coarse label accuracy: 0.73\n",
+      "\n",
+      "\n",
+      "medium_mammals superclass coarse label accuracy: 0.736\n",
+      "skunk subclass coarse label accuracy: 0.69\n",
+      "porcupine subclass coarse label accuracy: 0.76\n",
+      "raccoon subclass coarse label accuracy: 0.8\n",
+      "possum subclass coarse label accuracy: 0.65\n",
+      "fox subclass coarse label accuracy: 0.78\n",
+      "\n",
+      "\n",
+      "vehicles_2 superclass coarse label accuracy: 0.844\n",
+      "streetcar subclass coarse label accuracy: 0.75\n",
+      "rocket subclass coarse label accuracy: 0.84\n",
+      "lawn_mower subclass coarse label accuracy: 0.88\n",
+      "tractor subclass coarse label accuracy: 0.9\n",
+      "tank subclass coarse label accuracy: 0.85\n",
+      "\n",
+      "\n",
+      "household_electrical_devices superclass coarse label accuracy: 0.826\n",
+      "lamp subclass coarse label accuracy: 0.68\n",
+      "keyboard subclass coarse label accuracy: 0.91\n",
+      "clock subclass coarse label accuracy: 0.81\n",
+      "television subclass coarse label accuracy: 0.83\n",
+      "telephone subclass coarse label accuracy: 0.9\n",
+      "\n",
+      "\n",
+      "large_carnivores superclass coarse label accuracy: 0.784\n",
+      "lion subclass coarse label accuracy: 0.84\n",
+      "wolf subclass coarse label accuracy: 0.81\n",
+      "leopard subclass coarse label accuracy: 0.84\n",
+      "bear subclass coarse label accuracy: 0.5\n",
+      "tiger subclass coarse label accuracy: 0.93\n",
+      "\n",
+      "\n",
+      "reptiles superclass coarse label accuracy: 0.688\n",
+      "dinosaur subclass coarse label accuracy: 0.67\n",
+      "turtle subclass coarse label accuracy: 0.68\n",
+      "crocodile subclass coarse label accuracy: 0.64\n",
+      "snake subclass coarse label accuracy: 0.74\n",
+      "lizard subclass coarse label accuracy: 0.71\n",
+      "\n",
+      "\n",
+      "food_containers superclass coarse label accuracy: 0.862\n",
+      "can subclass coarse label accuracy: 0.93\n",
+      "plate subclass coarse label accuracy: 0.87\n",
+      "bottle subclass coarse label accuracy: 0.81\n",
+      "bowl subclass coarse label accuracy: 0.79\n",
+      "cup subclass coarse label accuracy: 0.91\n",
+      "\n",
+      "\n",
+      "vehicles_1 superclass coarse label accuracy: 0.836\n",
+      "bicycle subclass coarse label accuracy: 0.93\n",
+      "pickup_truck subclass coarse label accuracy: 0.84\n",
+      "train subclass coarse label accuracy: 0.69\n",
+      "bus subclass coarse label accuracy: 0.78\n",
+      "motorcycle subclass coarse label accuracy: 0.94\n",
+      "\n",
+      "\n",
+      "household_furniture superclass coarse label accuracy: 0.894\n",
+      "chair subclass coarse label accuracy: 0.92\n",
+      "couch subclass coarse label accuracy: 0.83\n",
+      "wardrobe subclass coarse label accuracy: 0.96\n",
+      "table subclass coarse label accuracy: 0.8\n",
+      "bed subclass coarse label accuracy: 0.96\n",
+      "\n",
+      "\n",
+      "trees superclass coarse label accuracy: 0.928\n",
+      "palm_tree subclass coarse label accuracy: 0.92\n",
+      "oak_tree subclass coarse label accuracy: 0.97\n",
+      "maple_tree subclass coarse label accuracy: 0.97\n",
+      "pine_tree subclass coarse label accuracy: 0.86\n",
+      "willow_tree subclass coarse label accuracy: 0.92\n",
+      "\n",
+      "\n",
+      "fish superclass coarse label accuracy: 0.786\n",
+      "shark subclass coarse label accuracy: 0.71\n",
+      "flatfish subclass coarse label accuracy: 0.71\n",
+      "ray subclass coarse label accuracy: 0.78\n",
+      "trout subclass coarse label accuracy: 0.88\n",
+      "aquarium_fish subclass coarse label accuracy: 0.85\n",
+      "\n",
+      "\n",
+      "people superclass coarse label accuracy: 0.902\n",
+      "boy subclass coarse label accuracy: 0.96\n",
+      "baby subclass coarse label accuracy: 0.91\n",
+      "girl subclass coarse label accuracy: 0.9\n",
+      "man subclass coarse label accuracy: 0.86\n",
+      "woman subclass coarse label accuracy: 0.88\n",
+      "\n",
+      "\n",
+      "large_man-made_outdoor_things superclass coarse label accuracy: 0.894\n",
+      "house subclass coarse label accuracy: 0.8\n",
+      "castle subclass coarse label accuracy: 0.95\n",
+      "skyscraper subclass coarse label accuracy: 0.92\n",
+      "bridge subclass coarse label accuracy: 0.84\n",
+      "road subclass coarse label accuracy: 0.96\n",
+      "\n",
+      "\n",
+      "non-insect_invertebrates superclass coarse label accuracy: 0.734\n",
+      "snail subclass coarse label accuracy: 0.71\n",
+      "crab subclass coarse label accuracy: 0.8\n",
+      "lobster subclass coarse label accuracy: 0.7\n",
+      "worm subclass coarse label accuracy: 0.66\n",
+      "spider subclass coarse label accuracy: 0.8\n",
+      "\n",
+      "\n",
+      "small_mammals superclass coarse label accuracy: 0.73\n",
+      "rabbit subclass coarse label accuracy: 0.64\n",
+      "mouse subclass coarse label accuracy: 0.78\n",
+      "shrew subclass coarse label accuracy: 0.67\n",
+      "hamster subclass coarse label accuracy: 0.87\n",
+      "squirrel subclass coarse label accuracy: 0.69\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "coarse_class = 'aquatic_mammals'\n",
-    "coarse_class_df = prediction_df[prediction_df['coarse_labels_string']==coarse_class]\n",
-    "coarse_class_acc = accuracy_score(coarse_class_df['coarse_labels'],coarse_class_df['coarse_preds'])\n",
-    "print(f'{coarse_class} coarse accuracy: {coarse_class_acc}')\n",
-    "for fine_class in coarse_class_df['fine_labels_string'].unique():\n",
-    "    fine_class_df = coarse_class_df[coarse_class_df['fine_labels_string']==fine_class]\n",
-    "    fine_class_acc = accuracy_score(fine_class_df['coarse_labels'],fine_class_df['coarse_preds'])\n",
-    "    print(f'{fine_class} coarse accuracy: {fine_class_acc}')"
+    "accuracy_type = 'coarse'\n",
+    "for coarse_class in prediction_df['coarse_labels_string'].unique():\n",
+    "    coarse_class_df = prediction_df[prediction_df['coarse_labels_string']==coarse_class]\n",
+    "    coarse_class_acc = accuracy_score(coarse_class_df[f'{accuracy_type}_labels'],coarse_class_df[f'{accuracy_type}_preds'])\n",
+    "    print(f'{coarse_class} superclass {accuracy_type} label accuracy: {coarse_class_acc}')\n",
+    "   # print(f\"fine label disribution: {Counter(coarse_class_df['fine_labels_string'])}\")\n",
+    "    for fine_class in coarse_class_df['fine_labels_string'].unique():\n",
+    "        fine_class_df = coarse_class_df[coarse_class_df['fine_labels_string']==fine_class]\n",
+    "        fine_class_acc = accuracy_score(fine_class_df[f'{accuracy_type}_labels'],fine_class_df[f'{accuracy_type}_preds'])\n",
+    "        print(f'{fine_class} subclass {accuracy_type} label accuracy: {fine_class_acc}')\n",
+    "    print('\\n')"
    ]
   },
   {
