moving coarse results function to utils

--- a/notebooks/analyze-superclass-results-08-23.ipynb
+++ b/notebooks/analyze-superclass-results-08-23.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -360,30 +360,14 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "from collections import defaultdict\n",
-    "\n",
-    "# Computing superclass accuracy and subclass accuracy\n",
-    "coarse_results = defaultdict(dict)\n",
-    "accuracy_type = 'coarse'\n",
-    "for coarse_class in prediction_df['coarse_labels_string'].unique():\n",
-    "    coarse_accs = {}\n",
-    "    coarse_class_df = prediction_df[prediction_df['coarse_labels_string']==coarse_class]\n",
-    "    coarse_class_acc = accuracy_score(coarse_class_df[f'{accuracy_type}_labels'],coarse_class_df[f'preds'])\n",
-    "    print(f'{coarse_class} superclass {accuracy_type} label accuracy: {coarse_class_acc}')\n",
-    "    coarse_results['superclass'].update({coarse_class:coarse_class_acc})\n",
-    "   # print(f\"fine label disribution: {Counter(coarse_class_df['fine_labels_string'])}\")\n",
-    "    for ii, fine_class in enumerate(coarse_class_df['fine_labels_string'].unique()):\n",
-    "        fine_class_df = coarse_class_df[coarse_class_df['fine_labels_string']==fine_class]\n",
-    "        fine_class_acc = accuracy_score(fine_class_df[f'{accuracy_type}_labels'],fine_class_df[f'preds'])\n",
-    "        print(f'{fine_class} subclass {accuracy_type} label accuracy: {fine_class_acc}')\n",
-    "        coarse_results[f'subclass_{ii}'].update({coarse_class:fine_class_acc})\n",
-    "    print('\\n')"
+    "# Getting coarse class accuracies\n",
+    "from analysis.analysis_utils import get_coarse_accuracies\n",
+    "coarse_results = get_coarse_accuracies(prediction_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +405,7 @@
     "ax.legend(h,l, ncol=2, loc='lower right')\n",
     "ax.set_ylim([0.3,1.02])\n",
     "plt.tight_layout()\n",
-    "plt.savefig('Superclass-Subclass-CIFAR-100-Correct-Val.png',format='png')\n",
+    "plt.savefig(f'{checkpoint_path}/Superclass-Subclass-CIFAR-100-Correct-Val.png',format='png')\n",
     "plt.show()"
    ]
   },
